resources/other/greetings-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #    alb.ingress.kubernetes.io/healthcheck-port: "32048"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: "observe-eks-istio.dev.example-api.com"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:676164205626:certificate/c5f44f83-f06f-4d35-9366-f9cab30c6862"
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true,idle_timeout.timeout_seconds=30,access_logs.s3.enabled=true,access_logs.s3.bucket=garystaf-aws-alb-logs-api,access_logs.s3.prefix=nlp-app
    # alb.ingress.kubernetes.io/waf-acl-id: 0d89149e-d3d4-49d1-a2b3-a62071c932e4
  labels:
    app: greetings-app
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /*
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - pathType: Prefix
            path: /*
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
